Добавлен вывод ошибок

--- a/1/templates/summa.html
+++ b/1/templates/summa.html
@@ -9,8 +9,8 @@
     <body>
         <div> 
             <form action="/result/" method="post">
-                <p>Число 1: <input type="number" name="1"/></p>
-                <p>Число 2: <input type="number" name="2"/></p>
+                <p>Число 1: <input type="text" name="1"/></p>
+                <p>Число 2: <input type="text" name="2"/></p>
                 <p><input type="submit" name="посчитать"/></p>
             </form>
         </div>
