изменена логика отображения

--- a/1/templates/result.html
+++ b/1/templates/result.html
@@ -9,6 +9,8 @@
             {% block content %}
             {{result}}
             {% endblock %}
+            <br/>
+            <a href="/summa/">посчитать еще</a>
         </div>
     </body>
 
